Add some checks to cards and accounts (to understand)

--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_300\\2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_21784\\2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4            2  "
       ]
      },
-     "execution_count": 338,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4      577     3687  classic    94      2   15"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 341,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 342,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 343,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 344,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 346,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1610,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,8 @@
       "Cards columns:  Index(['card_id', 'disp_id', 'card_type', 'card_year', 'card_month',\n",
       "       'card_day', 'account_id'],\n",
       "      dtype='object')\n",
-      "iguais\n"
+      "iguais\n",
+      "All accounts have only a card! (And is of the acc OWNER)\n"
      ]
     },
     {
@@ -2224,7 +2225,7 @@
        "30        31  "
       ]
      },
-     "execution_count": 349,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,13 +2246,16 @@
     "    print(\"iguais\")\n",
     "    teste.drop('account_id_y', inplace=True, axis=1)\n",
     "    teste.rename(columns = {'account_id_x':'account_id'}, inplace=True)\n",
+    "\n",
+    "if (teste.account_id.is_unique == True):\n",
+    "    print(\"All accounts have only a card! (And is of the acc OWNER)\")\n",
     "teste\n",
-    "# teste.account_id.is_unique\n"
+    "# cards.card_id.is_unique # True -> significa que só há um disponent/OWNER por card\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2260,7 +2264,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2268,12 +2272,14 @@
    "source": [
     "# DONE: correct -> tests if there is more than one card per account (test follows)\n",
     "cards_per_account = cards.groupby(['account_id']).size()\n",
-    "cards_per_account[cards_per_account > 1]\n"
+    "cards_per_account[cards_per_account > 1]\n",
+    "\n",
+    "# cards.account_id.is_unique # True -> se account_id tem valores únicos, significa que só há um cartão por conta \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2284,7 +2290,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2301,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2693,7 @@
        "[11 rows x 28 columns]"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2714,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
