--- a/project.ipynb
+++ b/project.ipynb
@@ -28,36 +28,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     loan_id  account_id    date  amount  duration  payments  status\n",
-      "0       5314        1787  930705   96396        12      8033      -1\n",
-      "1       5316        1801  930711  165960        36      4610       1\n",
-      "2       6863        9188  930728  127080        60      2118       1\n",
-      "3       5325        1843  930803  105804        36      2939       1\n",
-      "4       7240       11013  930906  274740        60      4579       1\n",
-      "..       ...         ...     ...     ...       ...       ...     ...\n",
-      "323     6818        9030  961212  155616        48      3242       1\n",
-      "324     5625        3189  961215  222180        60      3703      -1\n",
-      "325     6805        8972  961221   45024        48       938       1\n",
-      "326     7233       10963  961225  115812        36      3217       1\n",
-      "327     7308       11362  961227  129408        24      5392       1\n",
-      "\n",
-      "[328 rows x 7 columns]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_20669/2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_16210/1512161642.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_id</th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>payments</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5314</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>930705</td>\n",
+       "      <td>96396</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8033</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5316</td>\n",
+       "      <td>1801</td>\n",
+       "      <td>930711</td>\n",
+       "      <td>165960</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4610</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6863</td>\n",
+       "      <td>9188</td>\n",
+       "      <td>930728</td>\n",
+       "      <td>127080</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2118</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5325</td>\n",
+       "      <td>1843</td>\n",
+       "      <td>930803</td>\n",
+       "      <td>105804</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2939</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7240</td>\n",
+       "      <td>11013</td>\n",
+       "      <td>930906</td>\n",
+       "      <td>274740</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4579</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_id  account_id    date  amount  duration  payments  status\n",
+       "0     5314        1787  930705   96396        12      8033      -1\n",
+       "1     5316        1801  930711  165960        36      4610       1\n",
+       "2     6863        9188  930728  127080        60      2118       1\n",
+       "3     5325        1843  930803  105804        36      2939       1\n",
+       "4     7240       11013  930906  274740        60      4579       1"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -75,7 +153,7 @@
     "loans = pd.read_csv(DATA_SOURCE + 'loan_dev.csv', sep=';')\n",
     "transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n",
     "\n",
-    "print(loans)"
+    "loans.head()"
    ]
   },
   {
@@ -102,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +278,7 @@
        "4            2  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,19 +302,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'preprocess_cards' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cards \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_cards\u001b[49m(cards)\n\u001b[1;32m      2\u001b[0m cards\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'preprocess_cards' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>card_id</th>\n",
+       "      <th>disp_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>9285</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>93</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>104</td>\n",
+       "      <td>588</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>747</td>\n",
+       "      <td>4915</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>70</td>\n",
+       "      <td>439</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>577</td>\n",
+       "      <td>3687</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   card_id  disp_id     type  year  month  day\n",
+       "0     1005     9285  classic    93     11    7\n",
+       "1      104      588  classic    94      1   19\n",
+       "2      747     4915  classic    94      2    5\n",
+       "3       70      439  classic    94      2    8\n",
+       "4      577     3687  classic    94      2   15"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -257,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +507,7 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -471,15 +630,14 @@
        "4                          1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "no_dispositions = dispositions.groupby(\"account_id\")[\"type\"].count().reset_index(name=\"number_account_dispositions\")\n",
-    "disposition_owner_ratio = dispositions.groupby(\"account_id\")[\"type\"].apply(lambda x: x[x == 'DISPONENT'].count()).reset_index(name=\"number_account_disponents\")\n",
-    "dispositions = dispositions.merge(no_dispositions, on=\"account_id\").merge(disposition_owner_ratio, on=\"account_id\")\n",
+    "from src.preprocess.dispositions import preprocess_dispositions\n",
+    "dispositions = preprocess_dispositions(dispositions)\n",
     "dispositions.head()"
    ]
   },
@@ -499,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -642,27 +800,14 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "districts[\"no. of commited crimes '95\"] = np.where(districts[\"no. of commited crimes '95\"].eq(\"?\"), districts[\"no. of commited crimes '96\"], districts[\"no. of commited crimes '95\"])\n",
-    "districts = districts.astype({\"no. of commited crimes '95\": int, \"no. of commited crimes '96\": int})\n",
-    "districts[\"crime_growth\"] = districts[\"no. of commited crimes '96\"] / districts[\"no. of commited crimes '95\"]\n",
-    "\n",
-    "districts[\"unemploymant rate '95\"] = np.where(districts[\"unemploymant rate '95\"].eq(\"?\"), districts[\"unemploymant rate '96\"], districts[\"unemploymant rate '95\"])\n",
-    "districts = districts.astype({\"unemploymant rate '95\": float, \"unemploymant rate '96\": float})\n",
-    "districts[\"unemploymant_growth\"] = districts[\"unemploymant rate '96\"] / districts[\"unemploymant rate '95\"]\n",
-    "\n",
-    "districts.drop(axis=1, columns=[\"no. of commited crimes '95\", \"unemploymant rate '95\", \"no. of municipalities with inhabitants < 499\",\"no. of municipalities with inhabitants 500-1999\", \"no. of municipalities with inhabitants 2000-9999\", \"no. of municipalities with inhabitants 2000-9999\", \"no. of municipalities with inhabitants >10000\", \"name\", \"region\"], inplace=True)\n",
-    "districts[\"no. of enterpreneurs per 1000 inhabitants\"] = districts[\"no. of enterpreneurs per 1000 inhabitants\"] / 1000\n",
-    "districts.rename({\"code\": \"district_id\", \"no. of inhabitants\": \"district_no_inhabitants\", \"no. of cities\": \"district_no_cities\", \"ratio of urban inhabitants\": \"district_urban_inhabitants_ratio\", \"average salary\": \"district_average_salary\", \"unemploymant_growth\": \"district_unemploymant_growth\", \"crime_growth\": \"district_crime_growth\", \"no. of enterpreneurs per 1000 inhabitants\": \"districts_entrepreneurs_ratio\", \"unemploymant rate '96\" : \"district_unemployment_rate\", \"no. of commited crimes '96\" : \"district_crimes_per_year\"}, axis=1, inplace=True)\n",
-    "districts['district_crimes_per_year'] = districts['district_crimes_per_year'].astype(int) / districts['district_no_inhabitants']\n",
-    "districts.rename({\"district_crimes_per_year\": \"district_crimes_per_inhabitant\"}, axis=1, inplace=True)\n",
-    "\n",
+    "from src.preprocess.districts import preprocess_districts\n",
+    "districts = preprocess_districts(districts)\n",
     "districts.head()"
    ]
   },
@@ -677,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -793,18 +938,14 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import src.preprocess.util as pp\n",
-    "\n",
-    "loans = pp.extract_date(loans, \"date\")\n",
-    "loans = pp.korunas_to_euros(loans, \"amount\")\n",
-    "loans = pp.korunas_to_euros(loans, \"payments\")\n",
-    "loans.rename(columns = {'payments':'monthly_payment', 'duration': 'duration_months'}, inplace = True)\n",
+    "from src.preprocess.loans import preprocess_loans\n",
+    "loans = preprocess_loans(loans)\n",
     "loans.head()"
    ]
   },
@@ -823,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -957,16 +1098,14 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transactions = pp.extract_date(transactions, \"date\")\n",
-    "transactions = pp.korunas_to_euros(transactions, \"amount\")\n",
-    "transactions = pp.korunas_to_euros(transactions, \"balance\")\n",
-    "transactions[\"amount\"] = np.where(transactions[\"type\"].eq(\"credit\"), transactions[\"amount\"], transactions[\"amount\"] * -1)\n",
+    "from src.preprocess.transactions import preprocess_transactions\n",
+    "transactions = preprocess_transactions(transactions)\n",
     "transactions.head()"
    ]
   },
@@ -988,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1085,21 +1224,14 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_card_account_id(disp_id):\n",
-    "    try:\n",
-    "        account_id = dispositions.query(f\"disp_id == {disp_id}\")['account_id'].values[0]\n",
-    "        return account_id\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "\n",
-    "cards['account_id'] = cards['disp_id'].apply(get_card_account_id)\n",
-    "cards.rename(columns = {'type':'card_type', 'year': 'card_year', 'month': 'card_month', 'day': 'card_day'}, inplace = True)\n",
+    "import src.feature_engineering.merge as merge\n",
+    "cards = merge.merge_card_account(cards, dispositions)\n",
     "cards.head()"
    ]
   },
@@ -1114,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1420,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1665,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1746,21 +1878,20 @@
        "4                      1.292553              2244.168398  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "average_account_balances = transactions.groupby([\"account_id\"])[\"balance\"].mean().to_frame()\n",
-    "average_account_balances.rename(columns = {'balance':'account_average_balance'}, inplace = True)\n",
-    "accounts = accounts.merge(average_account_balances, on=\"account_id\")\n",
+    "from src.feature_engineering.merge import merge_account_transactions\n",
+    "accounts = merge_account_transactions(accounts, transactions)\n",
     "accounts.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1828,9 +1959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [75], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n\u001b[1;32m      3\u001b[0m target \u001b[39m=\u001b[39m loans_tmp\u001b[39m.\u001b[39mstatus\u001b[39m.\u001b[39mvalues\n\u001b[1;32m      4\u001b[0m independent \u001b[39m=\u001b[39m loans_tmp\u001b[39m.\u001b[39mdrop(\u001b[39m'\u001b[39m\u001b[39mstatus\u001b[39m\u001b[39m'\u001b[39m, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mvalues\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -1917,7 +2060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
