Add new models again (after merge)

--- a/project.ipynb
+++ b/project.ipynb
@@ -2170,6 +2170,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Another Models..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit Naive Bayes to the training set\n",
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "classifier = GaussianNB()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "\n",
+    "# Predict test set results\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVM\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "classifier = SVC()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classifier = LogisticRegression()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "classifier = MLPClassifier()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import BernoulliRBM\n",
+    "lassifier = BernoulliRBM()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "classifier = KNeighborsClassifier()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "classifier = MultinomialNB()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifiers = [ (\"cfl1\",LogisticRegression()),(\"cfl2\",SVC()),(\"cfl3\",GaussianNB()),(\"cfl4\",MultinomialNB()),(\"cfl5\",MLPClassifier())]\n",
+    "\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "\n",
+    "v_c = VotingClassifier(estimators= classifiers, voting=\"hard\",n_jobs = -1)\n",
+    "v_c = v_c.fit(x_train,y_train)\n",
+    "y_pred = v_c.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Evaluating the model\n",
     "\n",
     "Text"
