--- a/project.ipynb
+++ b/project.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_351512/2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_6604\\1512161642.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     },
@@ -140,7 +140,7 @@
        "4     7240       11013  930906  274740        60      4579       1"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4            2  "
       ]
      },
-     "execution_count": 630,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "4      577     3687  classic    94      2   15"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2019,7 @@
        "4                      1.292553              2244.168398  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2105,14 +2105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "target = loans_tmp.status.values\n",
-    "independent = loans_tmp.drop('status', axis=1).values\n",
+    "target = loans.status.values\n",
+    "independent = loans.drop('status', axis=1).values\n",
     "\n",
     "# Make sure to split by future date later...\n",
     "x_train, x_test, y_train, y_test = train_test_split(\n",
@@ -2130,18 +2130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1]\n",
-      "0.09090909090909091\n",
-      "0.8484848484848485\n"
+      "[-1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1\n",
+      "  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
+      "  1  1  1  1  1  1  1  1  1  1  1  1 -1 -1  1  1  1  1]\n",
+      "0.18181818181818182\n",
+      "0.8181818181818182\n"
      ]
     }
    ],
@@ -2175,9 +2175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "0.7727272727272727\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit Naive Bayes to the training set\n",
     "\n",
@@ -2188,14 +2197,25 @@
     "\n",
     "# Predict test set results\n",
     "y_pred = classifier.predict(x_test)\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "0.8333333333333334\n"
+     ]
+    }
+   ],
    "source": [
     "# SVM\n",
     "\n",
@@ -2205,14 +2225,38 @@
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "0.8333333333333334\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\joaoj\\AppData\\Roaming\\Python\\Python310\\site-packages\\sklearn\\linear_model\\_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -2220,14 +2264,24 @@
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.5454545454545454\n",
+      "0.42424242424242425\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
@@ -2235,56 +2289,96 @@
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "0.8333333333333334\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neural_network import BernoulliRBM\n",
     "lassifier = BernoulliRBM()\n",
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "0.8181818181818182\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "classifier = KNeighborsClassifier()\n",
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.18181818181818182\n",
+      "0.6212121212121212\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
     "classifier = MultinomialNB()\n",
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n",
+      "0.8333333333333334\n"
+     ]
+    }
+   ],
    "source": [
     "classifiers = [ (\"cfl1\",LogisticRegression()),(\"cfl2\",SVC()),(\"cfl3\",GaussianNB()),(\"cfl4\",MultinomialNB()),(\"cfl5\",MLPClassifier())]\n",
     "\n",
@@ -2294,7 +2388,8 @@
     "v_c = v_c.fit(x_train,y_train)\n",
     "y_pred = v_c.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
