Refactor naming to prepare for comp; left join loans to avoid losing data

--- a/project.ipynb
+++ b/project.ipynb
@@ -28,15 +28,15 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 1,
+         "execution_count": 34,
          "metadata": {},
          "outputs": [
             {
                "name": "stderr",
                "output_type": "stream",
                "text": [
-                  "/tmp/ipykernel_12453/1512161642.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-                  "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
+                  "/tmp/ipykernel_13137/3410173199.py:40: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+                  "  transactions = pd.read_csv(DATA_SOURCE + 'trans.csv', sep=';')\n"
                ]
             },
             {
@@ -133,7 +133,7 @@
                      "4     7240       11013  930906  274740        60      4579       1"
                   ]
                },
-               "execution_count": 1,
+               "execution_count": 34,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -142,16 +142,45 @@
             "import pandas as pd\n",
             "import numpy as np\n",
             "\n",
-            "DATA_SOURCE = 'data/'\n",
+            "COMP_DATA_SOURCE = \"comp_data/\"\n",
+            "DEV_DATA_SOURCE = \"dev_data/\"\n",
+            "DATA_SOURCE = DEV_DATA_SOURCE\n",
             "\n",
-            "# Read in the data\n",
-            "accounts = pd.read_csv(DATA_SOURCE + 'account.csv', sep=';')\n",
-            "cards = pd.read_csv(DATA_SOURCE + 'card_dev.csv', sep=';')\n",
-            "clients = pd.read_csv(DATA_SOURCE + 'client.csv', sep=';')\n",
-            "dispositions = pd.read_csv(DATA_SOURCE + 'disp.csv', sep=';')\n",
-            "districts = pd.read_csv(DATA_SOURCE + 'district.csv', sep=';')\n",
-            "loans = pd.read_csv(DATA_SOURCE + 'loan_dev.csv', sep=';')\n",
-            "transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n",
+            "# Read in the data; fill missing datasets for merges\n",
+            "try:\n",
+            "    accounts = pd.read_csv(DATA_SOURCE + 'account.csv', sep=';')\n",
+            "except FileNotFoundError:\n",
+            "    accounts = pd.read_csv(DEV_DATA_SOURCE + 'account.csv', sep=';')\n",
+            "\n",
+            "try:\n",
+            "    cards = pd.read_csv(DATA_SOURCE + 'card.csv', sep=';')\n",
+            "except FileNotFoundError:\n",
+            "    cards = pd.read_csv(DEV_DATA_SOURCE + 'card.csv', sep=';')\n",
+            "\n",
+            "try:\n",
+            "    clients = pd.read_csv(DATA_SOURCE + 'client.csv', sep=';')\n",
+            "except:\n",
+            "    clients = pd.read_csv(DEV_DATA_SOURCE + 'client.csv', sep=';')\n",
+            "\n",
+            "try:\n",
+            "    dispositions = pd.read_csv(DATA_SOURCE + 'disp.csv', sep=';')\n",
+            "except:\n",
+            "    dispositions = pd.read_csv(DEV_DATA_SOURCE + 'disp.csv', sep=';')\n",
+            "\n",
+            "try:\n",
+            "    districts = pd.read_csv(DATA_SOURCE + 'district.csv', sep=';')\n",
+            "except:\n",
+            "    districts = pd.read_csv(DEV_DATA_SOURCE + 'district.csv', sep=';')\n",
+            "\n",
+            "try:\n",
+            "    loans = pd.read_csv(DATA_SOURCE + 'loan.csv', sep=';')\n",
+            "except:\n",
+            "    loans = pd.read_csv(DEV_DATA_SOURCE + 'loan.csv', sep=';')\n",
+            "\n",
+            "try:\n",
+            "    transactions = pd.read_csv(DATA_SOURCE + 'trans.csv', sep=';')\n",
+            "except:\n",
+            "    transactions = pd.read_csv(DEV_DATA_SOURCE + 'trans.csv', sep=';')\n",
             "\n",
             "loans.head()"
          ]
@@ -180,7 +209,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": 35,
          "metadata": {},
          "outputs": [
             {
@@ -278,7 +307,7 @@
                      "4            2  "
                   ]
                },
-               "execution_count": 2,
+               "execution_count": 35,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -302,7 +331,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 3,
+         "execution_count": 36,
          "metadata": {},
          "outputs": [
             {
@@ -393,7 +422,7 @@
                      "4      577     3687  classic    94      2   15"
                   ]
                },
-               "execution_count": 3,
+               "execution_count": 36,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -416,7 +445,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 4,
+         "execution_count": 37,
          "metadata": {},
          "outputs": [
             {
@@ -507,7 +536,7 @@
                      "4          5            5    60      7    3  female"
                   ]
                },
-               "execution_count": 4,
+               "execution_count": 37,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -532,7 +561,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 5,
+         "execution_count": 38,
          "metadata": {},
          "outputs": [
             {
@@ -630,7 +659,7 @@
                      "4                          1  "
                   ]
                },
-               "execution_count": 5,
+               "execution_count": 38,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -657,7 +686,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": 39,
          "metadata": {},
          "outputs": [
             {
@@ -800,7 +829,7 @@
                      "4                      1.150649  "
                   ]
                },
-               "execution_count": 6,
+               "execution_count": 39,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -822,7 +851,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 7,
+         "execution_count": 40,
          "metadata": {},
          "outputs": [
             {
@@ -938,7 +967,7 @@
                      "4    93      9    6  "
                   ]
                },
-               "execution_count": 7,
+               "execution_count": 40,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -964,7 +993,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 8,
+         "execution_count": 41,
          "metadata": {},
          "outputs": [
             {
@@ -1098,7 +1127,7 @@
                      "4    28.69      NaN  NaN         NaN    93      1   19  "
                   ]
                },
-               "execution_count": 8,
+               "execution_count": 41,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1127,7 +1156,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 9,
+         "execution_count": 42,
          "metadata": {},
          "outputs": [
             {
@@ -1224,7 +1253,7 @@
                      "4      577     3687   classic         94           2        15        3050"
                   ]
                },
-               "execution_count": 9,
+               "execution_count": 42,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1246,7 +1275,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 10,
+         "execution_count": 43,
          "metadata": {},
          "outputs": [
             {
@@ -1420,7 +1449,7 @@
                      "4                      1.292553  "
                   ]
                },
-               "execution_count": 10,
+               "execution_count": 43,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1439,7 +1468,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 11,
+         "execution_count": 44,
          "metadata": {},
          "outputs": [
             {
@@ -1665,14 +1694,14 @@
                      "[5 rows x 22 columns]"
                   ]
                },
-               "execution_count": 11,
+               "execution_count": 44,
                "metadata": {},
                "output_type": "execute_result"
             }
          ],
          "source": [
             "accounts.rename(columns = {'year':'account_year', 'month':'account_month', 'day':'account_day', 'frequency': 'account_frequency', 'district_id': 'account_district_id'}, inplace=True)\n",
-            "loans = loans.merge(accounts, on=\"account_id\")\n",
+            "loans = loans.merge(accounts, on=\"account_id\", how=\"left\")\n",
             "loans.head()\n",
             "\n",
             "# merge with disp with card\n",
@@ -1698,7 +1727,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 12,
+         "execution_count": 45,
          "metadata": {},
          "outputs": [
             {
@@ -1878,7 +1907,7 @@
                      "4                      1.292553              2244.168398  "
                   ]
                },
-               "execution_count": 12,
+               "execution_count": 45,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1891,7 +1920,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 13,
+         "execution_count": 46,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -1909,7 +1938,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 14,
+         "execution_count": 47,
          "metadata": {},
          "outputs": [
             {
@@ -1964,7 +1993,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 15,
+         "execution_count": 48,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -1985,7 +2014,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 16,
+         "execution_count": 49,
          "metadata": {},
          "outputs": [
             {
