Write results to file, including dev to see performance

--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 198,
+         "execution_count": 260,
          "metadata": {},
          "outputs": [
             {
@@ -133,7 +133,7 @@
                      "4     7240       11013  930906  274740        60      4579       1"
                   ]
                },
-               "execution_count": 198,
+               "execution_count": 260,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -192,7 +192,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 199,
+         "execution_count": 261,
          "metadata": {},
          "outputs": [
             {
@@ -290,7 +290,7 @@
                      "4            2  "
                   ]
                },
-               "execution_count": 199,
+               "execution_count": 261,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -314,7 +314,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 200,
+         "execution_count": 262,
          "metadata": {},
          "outputs": [
             {
@@ -405,7 +405,7 @@
                      "4      577     3687  classic    94      2   15"
                   ]
                },
-               "execution_count": 200,
+               "execution_count": 262,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -428,7 +428,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 201,
+         "execution_count": 263,
          "metadata": {},
          "outputs": [
             {
@@ -519,7 +519,7 @@
                      "4          5            5    60      7    3  female"
                   ]
                },
-               "execution_count": 201,
+               "execution_count": 263,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -544,7 +544,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 202,
+         "execution_count": 264,
          "metadata": {},
          "outputs": [
             {
@@ -642,7 +642,7 @@
                      "4                          1  "
                   ]
                },
-               "execution_count": 202,
+               "execution_count": 264,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -669,7 +669,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 203,
+         "execution_count": 265,
          "metadata": {},
          "outputs": [
             {
@@ -812,7 +812,7 @@
                      "4                      1.150649  "
                   ]
                },
-               "execution_count": 203,
+               "execution_count": 265,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -834,7 +834,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 204,
+         "execution_count": 266,
          "metadata": {},
          "outputs": [
             {
@@ -950,7 +950,7 @@
                      "4    93      9    6  "
                   ]
                },
-               "execution_count": 204,
+               "execution_count": 266,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -977,7 +977,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 205,
+         "execution_count": 267,
          "metadata": {},
          "outputs": [
             {
@@ -1111,7 +1111,7 @@
                      "4    28.69      NaN  NaN         NaN    93      1   19  "
                   ]
                },
-               "execution_count": 205,
+               "execution_count": 267,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1140,7 +1140,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 206,
+         "execution_count": 268,
          "metadata": {},
          "outputs": [
             {
@@ -1244,7 +1244,7 @@
                      "4            2              1326.053913  "
                   ]
                },
-               "execution_count": 206,
+               "execution_count": 268,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1273,7 +1273,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 207,
+         "execution_count": 269,
          "metadata": {},
          "outputs": [
             {
@@ -1370,7 +1370,7 @@
                      "4      577     3687   classic         94           2        15        3050"
                   ]
                },
-               "execution_count": 207,
+               "execution_count": 269,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1392,7 +1392,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 208,
+         "execution_count": 270,
          "metadata": {},
          "outputs": [
             {
@@ -1572,7 +1572,7 @@
                      "4                      1.292553  "
                   ]
                },
-               "execution_count": 208,
+               "execution_count": 270,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1591,7 +1591,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 209,
+         "execution_count": 271,
          "metadata": {},
          "outputs": [
             {
@@ -1817,7 +1817,7 @@
                      "[5 rows x 23 columns]"
                   ]
                },
-               "execution_count": 209,
+               "execution_count": 271,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1844,7 +1844,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 210,
+         "execution_count": 272,
          "metadata": {},
          "outputs": [
             {
@@ -1901,7 +1901,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 211,
+         "execution_count": 273,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -1922,20 +1922,16 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 214,
+         "execution_count": 274,
          "metadata": {},
          "outputs": [
             {
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "DEV DATA\n",
                   "0.8214285714285714\n",
                   "0.8761061946902655\n",
-                  "0.9382716049382716\n",
-                  "COMPETITION DATA\n",
-                  "[[0.26, 0.74], [0.08, 0.92], [0.52, 0.48], [0.28, 0.72], [0.24, 0.76], [0.2, 0.8], [0.18, 0.82], [0.36, 0.64], [0.1, 0.9], [0.18, 0.82]]\n",
-                  "[ 1  1 -1  1  1  1  1  1  1  1]\n"
+                  "0.9382716049382716\n"
                ]
             }
          ],
@@ -1951,26 +1947,28 @@
             "random_classifier.fit(x_train, y_train)\n",
             "\n",
             "# Predict the test data for dev and evaluate\n",
-            "print(\"DEV DATA\")\n",
             "predictions_dev = random_classifier.predict(x_test)\n",
+            "predictions_dev_prob = random_classifier.predict_proba(x_test)\n",
             "print(recall_score(y_test, predictions_dev, pos_label=-1))\n",
             "print(accuracy_score(y_test, predictions_dev))\n",
             "print(precision_score(y_test, predictions_dev))\n",
             "\n",
+            "# Write the dev predictions to a file\n",
+            "predictions_dev_id = x_test[\"loan_id\"]\n",
+            "predictions_dev_debt = [x[0] for x in predictions_dev_prob]\n",
+            "predictions_df_dev = pd.DataFrame({\"Id\": predictions_dev_id, \"Predicted\": predictions_dev_debt, \"Actual\": y_test})\n",
+            "predictions_df_dev.to_csv(\"output/predictions_dev.csv\", index=False)\n",
             "\n",
             "# Predict the competition data with probabilities\n",
-            "print(\"COMPETITION DATA\")\n",
             "loans_comp_indep = loans_comp.drop(axis=1, columns=[\"status\"])\n",
             "predictions_comp_prob = random_classifier.predict_proba(loans_comp_indep).tolist()\n",
             "predictions_comp = random_classifier.predict(loans_comp_indep)\n",
-            "print(predictions_comp_prob[:10])\n",
-            "print(predictions_comp[:10])\n",
             "\n",
-            "# Write the predictions to a file\n",
+            "# Write the comp predictions to a file\n",
             "predictions_comp_debt = [x[0] for x in predictions_comp_prob]\n",
             "predictions_comp_id = loans_comp[\"loan_id\"].tolist()\n",
-            "predictions_df = pd.DataFrame({\"Id\": predictions_comp_id, \"Predicted\": predictions_comp_debt})\n",
-            "predictions_df.to_csv(\"output/predictions.csv\", index=False)"
+            "predictions_df_comp = pd.DataFrame({\"Id\": predictions_comp_id, \"Predicted\": predictions_comp_debt})\n",
+            "predictions_df_comp.to_csv(\"output/predictions_comp.csv\", index=False)"
          ]
       },
       {
