Unlink data loading from data processing

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -10,21 +10,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\joaoj\\Desktop\\FEUP_202223\\AC\\feup-ac-banking\\src\\pipeline.py:23: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\Desktop\\FEUP_202223\\AC\\feup-ac-banking\\src\\load_data.py:23: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions_dev = pd.read_csv(DEV_DATA_SOURCE + 'trans.csv', sep=';')\n"
      ]
     }
    ],
    "source": [
-    "# runs pipeline (loads and processes data)\n",
-    "%run ./src/pipeline.py"
+    "# loads data\n",
+    "%run ./src/load_data.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\joaoj\\Desktop\\FEUP_202223\\AC\\feup-ac-banking\\src\\load_data.py:23: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  transactions_dev = pd.read_csv(DEV_DATA_SOURCE + 'trans.csv', sep=';')\n"
+     ]
+    }
+   ],
+   "source": [
+    "% processes data\n",
+    "%run ./src/processing_data.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistics (after processing)"
    ]
   },
   {
@@ -36,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,19 +93,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Statistics (legacy)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##### Average salary per district"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
